--- a/selenium_framework/pom.xml
+++ b/selenium_framework/pom.xml
@@ -67,6 +67,21 @@
 		<artifactId>testing</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.19.0</version>
+	</dependency>
+	
+	 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>5.1.2</version>
+	</dependency>
+	
   </dependencies>
 
   <build>
