screenshot code is fixed

--- a/selenium_framework/pom.xml
+++ b/selenium_framework/pom.xml
@@ -41,11 +41,11 @@
       <scope>test</scope>
     </dependency>
     
-        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 	<dependency>
-    	<groupId>org.seleniumhq.selenium</groupId>
-    	<artifactId>selenium-java</artifactId>
-	    <version>4.31.0</version>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>4.33.0</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -84,9 +84,71 @@
 	
   </dependencies>
 
-  <build>
+<profiles>
+	<profile>
+	<id>Regression</id>
+	<build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
+       	 <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>3.5.3</version>
+	        <configuration>
+	          <suiteXmlFiles>
+	            <suiteXmlFile>testSuites/testng.xml</suiteXmlFile>
+	          </suiteXmlFiles>
+	        </configuration>
+	      </plugin>
+    	  </plugins>
+	     </pluginManagement>
+	    </build>     
+	</profile>
+	
+	<profile>
+	<id>purchase</id>
+	<build>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+      <plugins>
+       	 <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>3.5.3</version>
+	        <configuration>
+	          <suiteXmlFiles>
+	            <suiteXmlFile>testSuites/purchase.xml</suiteXmlFile>
+	          </suiteXmlFiles>
+	        </configuration>
+	      </plugin>
+    	  </plugins>
+	     </pluginManagement>
+	    </build>
+	</profile>
+	
+	<profile>
+	<id>errorvalidation</id>
+	<build>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+      <plugins>
+       	 <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>3.5.3</version>
+	        <configuration>
+	          <suiteXmlFiles>
+	            <suiteXmlFile>testSuites/errorvalidation.xml</suiteXmlFile>
+	          </suiteXmlFiles>
+	        </configuration>
+	      </plugin>
+    	  </plugins>
+	     </pluginManagement>
+	    </build>
+	</profile>
+
+</profiles>
+  <build>
+    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+      <plugins> 
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
